// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer balances 1`] = `
Object {
  "balances": Object {
    "test": "test",
  },
  "custodianPrices": Object {
    "last": "last",
    "reset": "reset",
  },
  "custodianStates": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer custodianPrices 1`] = `
Object {
  "balances": Object {
    "allowance": 0,
    "duo": 0,
    "eth": 0,
    "tokenA": 0,
    "tokenB": 0,
  },
  "custodianPrices": Object {
    "last": "last",
    "reset": "reset",
  },
  "custodianStates": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer custodianStates 1`] = `
Object {
  "balances": Object {
    "allowance": 0,
    "duo": 0,
    "eth": 0,
    "tokenA": 0,
    "tokenB": 0,
  },
  "custodianPrices": Object {
    "last": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "reset": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "custodianStates": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer default 1`] = `
Object {
  "balances": Object {
    "allowance": 0,
    "duo": 0,
    "eth": 0,
    "tokenA": 0,
    "tokenB": 0,
  },
  "custodianPrices": Object {
    "last": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "reset": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "custodianStates": Object {
    "alpha": 0,
    "beta": 0,
    "commissionRate": 0,
    "ethDuoFeeRatio": 0,
    "limitLower": 0,
    "limitPeriodic": 0,
    "limitUpper": 0,
    "navA": 0,
    "navB": 0,
    "nextResetAddrIndex": 0,
    "period": 0,
    "periodCoupon": 0,
    "preResetWaitingBlocks": 0,
    "state": "Unknown",
    "totalSupplyA": 0,
    "totalSupplyB": 0,
    "usersLength": 0,
  },
}
`;
